@@ -1,6 +1,11 @@
 1744.	[bug]		If tuple2msgname() failed to convert a tuple to
 			a name a REQUIRE could be triggered. [RT #12796]
 
+1742.	[bug]		If isc_taskmgr_create() was not able to create the
+			requested number of worker threads then destruction
+			of the manager would trigger an INSIST() failure.
+			[RT #12790]
+			
 1741.	[bug]		Deleting all records at a node in a secure zone
 			using a update-policy grant failed. [RT #12787]
 
